pod-security/baseline/restrict-seccomp/e2e/01-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../restrict-seccomp.yaml
assert:
- policy-assert.yaml
