pod-security/baseline/restrict-seccomp/e2e/bad-deployment.yaml
###### Deployments - Bad
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: busybox:1.35
      securityContext:
        seccompProfile:
          type: Unconfined
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: busybox:1.35
        securityContext:
          seccompProfile:
            type: Unconfined
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: busybox:1.35
      - name: container02
        image: busybox:1.35
        securityContext:
          seccompProfile:
            type: Unconfined
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment04
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: busybox:1.35
        securityContext:
          seccompProfile:
            type: RuntimeDefault
      - name: container02
        image: busybox:1.35
        securityContext:
          seccompProfile:
            type: Unconfined
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment05
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: initcontainer01
        image: busybox:1.35
        securityContext:
          seccompProfile:
            type: Unconfined
      containers:
      - name: container01
        image: busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment06
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: initcontainer01
        image: busybox:1.35
      - name: initcontainer02
        image: busybox:1.35
        securityContext:
          seccompProfile:
            type: Unconfined
      containers:
      - name: container01
        image: busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment07
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: initcontainer01
        image: busybox:1.35
        securityContext:
          seccompProfile:
            type: RuntimeDefault
      - name: initcontainer02
        image: busybox:1.35
        securityContext:
          seccompProfile:
            type: Unconfined
      containers:
      - name: container01
        image: busybox:1.35
