pod-security/baseline/restrict-seccomp/e2e/bad-pod.yaml
###### Pods - Bad
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: container01
    image: busybox:1.35
  securityContext:
    seccompProfile:
      type: Unconfined
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      seccompProfile:
        type: Unconfined
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
  - name: container01
    image: busybox:1.35
  - name: container02
    image: busybox:1.35
    securityContext:
      seccompProfile:
        type: Unconfined
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      seccompProfile:
        type: RuntimeDefault
  - name: container02
    image: busybox:1.35
    securityContext:
      seccompProfile:
        type: Unconfined
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod05
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
    securityContext:
      seccompProfile:
        type: Unconfined
  containers:
  - name: container01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod06
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
  - name: initcontainer02
    image: busybox:1.35
    securityContext:
      seccompProfile:
        type: Unconfined
  containers:
  - name: container01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod07
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
    securityContext:
      seccompProfile:
        type: RuntimeDefault
  - name: initcontainer02
    image: busybox:1.35
    securityContext:
      seccompProfile:
        type: Unconfined
  containers:
  - name: container01
    image: busybox:1.35
