pod-security/baseline/restrict-seccomp/e2e/good-deployment.yaml
###### Deployments - Good
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: busybox:1.35
      securityContext:
        seccompProfile:
          type: RuntimeDefault
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: busybox:1.35
      securityContext:
        seccompProfile:
          type: Localhost
          localhostProfile: operator/default/profile1.json
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment04
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: busybox:1.35
        securityContext:
          seccompProfile:
            type: RuntimeDefault
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment05
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: busybox:1.35
        securityContext:
          seccompProfile:
            type: Localhost
            localhostProfile: operator/default/profile1.json
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment06
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: busybox:1.35
      - name: container02
        image: busybox:1.35
        securityContext:
          seccompProfile:
            type: RuntimeDefault
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment07
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: busybox:1.35
        securityContext:
          seccompProfile:
            type: Localhost
            localhostProfile: operator/default/profile1.json
      - name: container02
        image: busybox:1.35
        securityContext:
          seccompProfile:
            type: RuntimeDefault
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment08
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: initcontainer01
        image: busybox:1.35
        securityContext:
          seccompProfile:
            type: RuntimeDefault
      containers:
      - name: container01
        image: busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment09
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: initcontainer01
        image: busybox:1.35
        securityContext:
          seccompProfile:
            type: Localhost
            localhostProfile: operator/default/profile1.json
      containers:
      - name: container01
        image: busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment10
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: initcontainer01
        image: busybox:1.35
      - name: initcontainer02
        image: busybox:1.35
        securityContext:
          seccompProfile:
            type: RuntimeDefault
      containers:
      - name: container01
        image: busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment11
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: initcontainer01
        image: busybox:1.35
        securityContext:
          seccompProfile:
            type: Localhost
            localhostProfile: operator/default/profile1.json
      - name: initcontainer02
        image: busybox:1.35
        securityContext:
          seccompProfile:
            type: RuntimeDefault
      containers:
      - name: container01
        image: busybox:1.35
