pod-security/baseline/restrict-seccomp/e2e/enforce-policy-assert.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: restrict-seccomp
spec:
  validationActions: [Deny]
status:
  conditionStatus:
    ready: true
