pod-security/baseline/restrict-seccomp/e2e/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-seccomp-policy
spec:
  steps:
  - name: test-restrict-seccomp
    try:
    - apply:
        file: ../restrict-seccomp.yaml
    - assert:
        file: policy-assert.yaml
    - patch:
        resource:
          apiVersion: policies.kyverno.io/v1alpha1
          kind: ValidatingPolicy
          metadata:
            name: restrict-seccomp
          spec:
            validationActions: [Deny]
    - assert:
        file: enforce-policy-assert.yaml
    - apply:
        file: good-resource.yaml
    - sleep:
        duration: 20s
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-resource.yaml
